# report2attack

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml
examples/: report2attack_report_20260119_122828.json  report2attack_report_20260119_122828.md  report2attack_report_20260119_122828_navigator.json
openspec/: project.md
openspec/changes/archive/2026-01-19-add-initial-implementation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-19-add-initial-implementation/specs/attack-mapping/: spec.md
openspec/changes/archive/2026-01-19-add-initial-implementation/specs/input-parsing/: spec.md
openspec/changes/archive/2026-01-19-add-initial-implementation/specs/output-formatting/: spec.md
openspec/changes/archive/2026-01-19-add-initial-implementation/specs/rag-pipeline/: spec.md
openspec/changes/archive/2026-01-20-download-pdf-urls/: proposal.md  tasks.md
openspec/specs/attack-mapping/: spec.md
openspec/specs/input-parsing/: spec.md
openspec/specs/output-formatting/: spec.md
openspec/specs/rag-pipeline/: spec.md
openspec/specs/text-extraction/: spec.md
src/report2attack/: __init__.py  cli.py
src/report2attack/mapping/: __init__.py  llm.py  mapper.py
src/report2attack/output/: __init__.py  formatters.py
src/report2attack/parsers/: __init__.py  pdf.py  pdf_url.py  web.py
src/report2attack/preprocessing/: __init__.py  text.py
src/report2attack/rag/: __init__.py  embeddings.py  retrieval.py  vector_store.py
tests/: test_mapping.py  test_output.py  test_parsers.py  test_pdf_url.py  test_preprocessing.py  test_rag.py
tests/fixtures/: sample_article.html  sample_llm_response.json
(+2 files in other folders)
