[project]
name = "report2attack"
version = "0.1.0"
description = "Automated threat intelligence to MITRE ATT&CK framework mapping tool"
readme = "README.md"
authors = [
    { name = "Jake Warren"}
]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "langchain-community>=0.0.20",
    "chromadb>=0.4.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "trafilatura>=1.6.0",
    "pypdf>=4.0.0",
    "pdfplumber>=0.10.0",
    "sentence-transformers>=2.2.0",
    "tiktoken>=0.6.0",
    "pydantic>=2.6.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "ipython>=8.12.0",
]

[project.scripts]
report2attack = "report2attack.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
src = [".","src","tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501","I001"]

[tool.ruff.lint.isort]
known-first-party = ["report2attack"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
